--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -14,6 +14,8 @@
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.mobile.android-logcat": "1.2.1",
     "com.unity.mobile.notifications": "1.3.2",
+    "com.unity.render-pipelines.universal": "10.5.1",
+    "com.unity.shadergraph": "10.5.1",
     "com.unity.test-framework": "1.1.24",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
